--- a/css/customCss.css
+++ b/css/customCss.css
@@ -1,4 +1,102 @@
-/* Primer vista Index */
+@font-face {
+    font-family: Calibri;
+    src:url(../fonts/Calibri.ttf);
+}
+@font-face {
+    font-family: OpenSans-SemiboldItalic;
+    src:url(../fonts/OpenSans-SemiboldItalic.ttf);
+}
+/* Consultar cédula estilos*/
+/**************************/
+
+.edit-icon{
+	background: url(../imgs/search.png) no-repeat;
+	background-size: 6%;
+	background-position:95%;
+}
+
+.personal-document{
+	color:#008136;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+input::-webkit-input-placeholder{
+	font-style:italic;
+}
+
+.form-control-custom{
+	padding:16px;
+	width:100%;
+	font-size: 15px;
+	border:1px solid #ccc;
+	border-radius:5px;
+}
+/* Login estilos */
+/*****************/
+h3.main-title{
+	text-align: center;
+	color: #008136;
+	font-weight: bolder;
+	font-style: italic;
+}
+form#login{
+	margin-top: 40px;
+}
+.form-custom{
+	width:65%;
+	margin: 0px auto;
+	background:white;
+	border-top:none;
+	border-left:none;
+	border-right:none;
+	border-bottom:1px solid #ccc;
+	border-radius:0px;
+	font-family: Calibri;
+	text-align: center;
+	box-shadow: none;
+}
+.form-control:active, .form-control:focus{
+	box-shadow: none;
+}
+.button{
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  width:100%;
+  text-align:center;
+  position: relative;
+  background-color:#008136;
+  color:rgb(255,255,255);
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-radius: 12px;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+ -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ff123852,Positive=true)";zoom:1;
+filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ff123852,Positive=true);
+  -moz-box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=2,Color=#33000000,Positive=true)";
+filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=2,Color=#33000000,Positive=true);
+-webkit-transform: skew(-10deg);
+-moz-transform: skew(-10deg);
+-o-transform: skew(-10deg);
+}
+
+p.information{
+	color:#df0209;
+	font-family: Calibri;
+	font-size: 14px;
+	font-style: italic;
+	margin-top: 10px;
+	text-align: center;
+}
+/* Dashboar estilos */
 /*************************************/
 .border-black{
 	/*border:1px solid black;*/
@@ -8,12 +106,23 @@ div.bg-img{
 	-webkit-background-size: contain;
 	background-size: contain;
 	height:200px;
+	margin-bottom: 5%;
 }
-p.custom-p{
-	font-style: italic;
-	font-size:18px;
+h3.main-title-user{
 	text-align: center;
-	margin-top:30px;
+	color: #DF0209;
+	font-weight: bolder;
+}
+a.log-out{
+	text-align: center;
+	color:#008136;
+	font-style: italic;
+	display: inline-block;
+	width:100%;
+	margin-bottom: 10px;
+}
+a.log-out:hover{
+	color:#008136;
 }
 p.title-of-archive{
 	font-size:18px;
@@ -38,7 +147,7 @@ i.i-white{
 }
 i.right{
 	float:right;
-	line-height: 20px;
+	line-height: 40px;
 	color:white;
 	font-size:20px;
 }
