--- a/css/custom.css
+++ b/css/custom.css
@@ -214,7 +214,6 @@ a:hover, a:focus { color:#fff; text-decoration:none;}
 header { padding:0 10%;}
 .green-text { color:#008136; font-family: Calibri;}
 .wizard {
-    margin: 20px auto;
     background: #fff;
 }
 
@@ -506,88 +505,6 @@ select.input-lg
 	width:15.5%;
 }
 }
-.checkbox {
-     }
-.checkbox label {
-    display: inline-block;
-    position: relative;
-    padding-left: 5px; width:100%; }
-.checkbox label::before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 17px;
-    height: 17px;
-    right: 0;
-	top:3px;
-    margin-left: -20px;
-    border: 1px solid #cccccc;
-    border-radius: 10px;
-    background-color: #fff;
-    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out, color 0.15s ease-in-out; cursor:pointer; }
-.checkbox label::after {
-    display: inline-block;
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    left: 0;
-    top: 0;
-    margin-left: -20px;
-    padding-left: 3px;
-    padding-top: 1px;
-    font-size: 11px;
-    color: #555555; }
-.checkbox input[type="checkbox"] {
-    opacity: 0; }
-.checkbox input[type="checkbox"]:focus + label::before {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
-    outline-offset: -2px; }
-.checkbox input[type="checkbox"]:checked + label::after {
-    font-family: 'FontAwesome';
-    content: "\f00c"; }
-.checkbox input[type="checkbox"]:disabled + label {
-    opacity: 0.65; }
-.checkbox input[type="checkbox"]:disabled + label::before {
-    background-color: #eeeeee;
-    cursor: not-allowed; }
-.checkbox.checkbox-circle label::before {
-    border-radius: 50%; }
-.checkbox.checkbox-inline {
-    margin-top: 0; }
-
-.checkbox-primary input[type="checkbox"]:checked + label::before {
-    background-color: #428bca;
-    border-color: #428bca; }
-.checkbox-primary input[type="checkbox"]:checked + label::after {
-    color: #fff; }
-
-.checkbox-danger input[type="checkbox"]:checked + label::before {
-    background-color: #d9534f;
-    border-color: #d9534f; }
-.checkbox-danger input[type="checkbox"]:checked + label::after {
-    color: #fff; }
-
-.checkbox-info input[type="checkbox"]:checked + label::before {
-    background-color: #5bc0de;
-    border-color: #5bc0de; }
-.checkbox-info input[type="checkbox"]:checked + label::after {
-    color: #fff; }
-
-.checkbox-warning input[type="checkbox"]:checked + label::before {
-    background-color: #f0ad4e;
-    border-color: #f0ad4e; }
-.checkbox-warning input[type="checkbox"]:checked + label::after {
-    color: #fff; }
-
-.checkbox-success input[type="checkbox"]:checked + label::before {
-    background-color: #5cb85c;
-    border-color: #5cb85c; }
-.checkbox-success input[type="checkbox"]:checked + label::after {
-    color: #fff; }
-
 .radio {
     padding-left: 0px; }
 .radio label {
@@ -732,9 +649,60 @@ form#form-archivo{
   padding:20px 40px;
 }
 
+a.link-custom{
+  color:#ff0000;
+  bottom:5px;
+  font-style: italic;
+  font-family: Calibri;
+  position:relative;
+}
+
+input#check-custom{
+  width:20px;
+  height:20px;
+}
+
+textarea#text-custom{
+  margin: 12px 0px;
+}
+
 a.a-home{
   float:left;
   left:2%;
   top:3%;
   position:absolute;
+}
+
+.nav-tabs{
+  border:none;
+}
+
+.wizard .tab-pane{
+  padding-top:0px;
+}
+
+.wizard .nav-tabs{
+  margin:10px auto;
+}
+
+/* Styles of Jquery validator  */
+/******************************/
+div.form-group{
+  position:relative;
+  margin-bottom:22px;
+}
+span.help-block.form-error{
+  color:rgb(170,0,0);
+  position:absolute;
+  padding:4px;
+  top:-30px;
+  left:0px;
+  width:100%;
+}
+form input.error{
+  border:1px solid rgba(205,0,0, 0.1);
+  background: rgba(205,0,0, 0.15);
+}
+form input.valid{
+  background: rgba(0,205,0,0.15);
 }
