--- a/lib/custom.css
+++ b/lib/custom.css
@@ -5,6 +5,8 @@ body {
 div.date_wrapper {
 	/*Ancho total del picker*/
 	width: 120px;
+	/*border:1px solid black;*/
+	height:170px;
 }
 div.date_wrapper article {
 	position: relative;
@@ -16,10 +18,10 @@ div.date_wrapper .lines {
 	border-top: solid 1px #018136;
 	border-bottom: solid 1px #018136;
 	position: absolute;
-	top: 58px;
+	top: 54px;
 	left: 0px;
 	width: 100%;
-	height: 24px;
+	height: 35px;
 }
 div.drum-wrapper {
 	float: left;
