--- a/css/customCss.css
+++ b/css/customCss.css
@@ -175,6 +175,19 @@ i.left{
 	float:left;
 	line-height: 40px;
 }
+
+button.btn-danger-custom{
+	border-radius:5px;
+	border:1px solid transparent;
+	background-color: #E00009;
+	position:relative;
+	float:right;
+	color:white;
+}
+button.btn-danger-custom:hover{
+	color:white;
+}
+/***********************/
 /* Estilos formulario */
 form#form-crono, form#form-archivo, form#form-update, div#form-search, form#form-segmentacion{
 	display: none;
