--- a/css/custom.css
+++ b/css/custom.css
@@ -697,6 +697,15 @@ button.btn-danger-custom:hover{
   color:white;
 }
 
+.modal-dialog{
+  margin-top: 20vh;
+}
+
+label.custom-label{
+  font-weight: bolder;
+  color:rgba(0,0,0,0.8);
+}
+
 /* Styles of Jquery validator  */
 /******************************/
 div.form-group{
@@ -707,8 +716,8 @@ span.help-block.form-error{
   color:rgb(170,0,0);
   position:absolute;
   padding:4px;
-  top:-30px;
-  left:0px;
+  top:23px;
+  left:5px;
   width:100%;
 }
 form input.error{
